--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "sqlite3": "^5.1.4"
   },
   "devDependencies": {
+    "eslint": "^8.31.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.6.0",
+    "eslint-plugin-promise": "^6.1.1",
     "nodemon": "^2.0.20"
   }
 }
