--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "express": "^4.18.2",
     "forever": "^4.0.3",
     "request": "^2.88.2",
-    "sqlite3": "^5.1.4"
+    "deta": "^1.1.0"
   },
   "devDependencies": {
     "eslint": "^8.31.0",
